tests/invalid/raise_unsupported_exception/main.py
def run_case() -> None:
    raise FooError("test")

if __name__ == "__main__":
    run_case()
